JWT e principais controllers

--- a/visualAPI/appsettings.json
+++ b/visualAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Jwt": {
+    "Key": "SENHA_COM_PELO_MENOS_32CHAR12345_e_MaiS_uNs_PrA_gaRANtir",
+    "Issuer": "visualAPI",
+    "Audience": "visualAPI"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=visualAPIDB;Username=postgres;Password=senha123"
   },
